# sudoku-engine

./: LICENSE  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
sudoku/: __init__.py  base_sudoku.py  sudoku.py
sudoku/variations/: __init__.py  classic_sudoku.py  diagonal_sudoku.py
