[project]
name = "sudoku-engine"
version = "2.0.0"
requires-python = ">=3.8"
authors = [
  {name = "Sepehr Rasouli", email = "sepehrrasouli06@gmail.com"},
]
description = "A simple Python package that generates and solves m x n Sudoku puzzles."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["SUDOKU"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sepehr-rs/sudoku-engine"
Issues = "https://github.com/sepehr-rs/sudoku-engine/issues"
GitHub = "https://github.com/sepehr-rs/sudoku-engine/py-sudoku"
